fix spacing issues with help/phone

--- a/sites/all/themes/pul_base/css/pul-base.no-query.css
+++ b/sites/all/themes/pul_base/css/pul-base.no-query.css
@@ -879,6 +879,10 @@ h1.icon-article-express--small-after:after {
   clear: both;
 }
 
+.page-research-databases-search .pul_base_nine_three-region--first ul {
+  margin-left: 0;
+}
+
 .pul_base_nine_three-region--second ul,
 .three_six_three-region--first ul,
 .menu .leaf,
@@ -909,10 +913,6 @@ h1.icon-article-express--small-after:after {
 .pul_base_nine_three-region--first ol li,
 .three_nine-region--second ol li {
   margin-bottom: 1em;
-}
-
-.page-research-databases-search .pul_base_nine_three-region--first ul {
-  margin-left: 0;
 }
 
 .field--name-field-news-letter-volume,
@@ -2794,7 +2794,7 @@ ul.nice-menu.nice-menu-menu-collection-development-webs .menuparent a:hover {
   margin-bottom: 1em;
 }
 
-.pul_base_nine_three-region--first ul {
+.page-news .pul_base_nine_three-region--first ul {
   margin-left: 0;
 }
 
